tests/NormalTests/paczka1/small_fuzzy/28913323.err
Error in line 3: alIYiZ S577 55,6
Error in line 7: yL3Krid8dw8 S577 41,2
Error in line 6: mq8oNHGT9X S577 15,4
Error in line 13: mq8oNHGT9X S282 14,6
